--- a/.gitignore
+++ b/.gitignore
@@ -1,207 +1,170 @@
-# Byte-compiled / optimized / DLL files
-__pycache__/
-*.py[codz]
-*$py.class
+# ========== AI-EVA Demo 项目特定规则 ==========
 
-# C extensions
-*.so
-
-# Distribution / packaging
-.Python
-build/
-develop-eggs/
-dist/
-downloads/
-eggs/
-.eggs/
-lib/
-lib64/
-parts/
-sdist/
-var/
-wheels/
-share/python-wheels/
-*.egg-info/
-.installed.cfg
-*.egg
-MANIFEST
-
-# PyInstaller
-#  Usually these files are written by a python script from a template
-#  before PyInstaller builds the exe, so as to inject date/other infos into it.
-*.manifest
-*.spec
-
-# Installer logs
-pip-log.txt
-pip-delete-this-directory.txt
-
-# Unit test / coverage reports
-htmlcov/
-.tox/
-.nox/
-.coverage
-.coverage.*
-.cache
-nosetests.xml
-coverage.xml
-*.cover
-*.py.cover
-.hypothesis/
-.pytest_cache/
-cover/
-
-# Translations
-*.mo
-*.pot
-
-# Django stuff:
-*.log
-local_settings.py
-db.sqlite3
-db.sqlite3-journal
-
-# Flask stuff:
-instance/
-.webassets-cache
-
-# Scrapy stuff:
-.scrapy
-
-# Sphinx documentation
-docs/_build/
-
-# PyBuilder
-.pybuilder/
-target/
-
-# Jupyter Notebook
-.ipynb_checkpoints
-
-# IPython
-profile_default/
-ipython_config.py
-
-# pyenv
-#   For a library or package, you might want to ignore these files since the code is
-#   intended to run in multiple environments; otherwise, check them in:
-# .python-version
-
-# pipenv
-#   According to pypa/pipenv#598, it is recommended to include Pipfile.lock in version control.
-#   However, in case of collaboration, if having platform-specific dependencies or dependencies
-#   having no cross-platform support, pipenv may install dependencies that don't work, or not
-#   install all needed dependencies.
-#Pipfile.lock
-
-# UV
-#   Similar to Pipfile.lock, it is generally recommended to include uv.lock in version control.
-#   This is especially recommended for binary packages to ensure reproducibility, and is more
-#   commonly ignored for libraries.
-#uv.lock
-
-# poetry
-#   Similar to Pipfile.lock, it is generally recommended to include poetry.lock in version control.
-#   This is especially recommended for binary packages to ensure reproducibility, and is more
-#   commonly ignored for libraries.
-#   https://python-poetry.org/docs/basic-usage/#commit-your-poetrylock-file-to-version-control
-#poetry.lock
-#poetry.toml
-
-# pdm
-#   Similar to Pipfile.lock, it is generally recommended to include pdm.lock in version control.
-#   pdm recommends including project-wide configuration in pdm.toml, but excluding .pdm-python.
-#   https://pdm-project.org/en/latest/usage/project/#working-with-version-control
-#pdm.lock
-#pdm.toml
-.pdm-python
-.pdm-build/
-
-# pixi
-#   Similar to Pipfile.lock, it is generally recommended to include pixi.lock in version control.
-#pixi.lock
-#   Pixi creates a virtual environment in the .pixi directory, just like venv module creates one
-#   in the .venv directory. It is recommended not to include this directory in version control.
-.pixi
-
-# PEP 582; used by e.g. github.com/David-OConnor/pyflow and github.com/pdm-project/pdm
-__pypackages__/
-
-# Celery stuff
-celerybeat-schedule
-celerybeat.pid
-
-# SageMath parsed files
-*.sage.py
-
-# Environments
+# 环境配置文件
 .env
-.envrc
-.venv
-env/
-venv/
-ENV/
-env.bak/
-venv.bak/
+.env.local
+.env.production
+.env.development
 
-# Spyder project settings
-.spyderproject
-.spyproject
+# 日志文件
+logs/
+*.log
+ai-eva.log
 
-# Rope project settings
-.ropeproject
+# 缓存目录
+cache/
+cache/audio/
+.cache/
+__pycache__/
 
-# mkdocs documentation
-/site
+# 临时文件
+temp/
+tmp/
+*.tmp
+*.temp
 
-# mypy
-.mypy_cache/
-.dmypy.json
-dmypy.json
+# 用户上传的模型文件
+uploads/
+user_models/
+models/
+*.vrm
+*.glb
+*.gltf
 
-# Pyre type checker
-.pyre/
+# 生成的音频文件
+generated_audio/
+*.mp3
+*.wav
+*.m4a
+*.flac
 
-# pytype static type analyzer
-.pytype/
+# 截图和导出文件
+screenshots/
+exports/
+*.png
+*.jpeg
+*.gif
 
-# Cython debug symbols
-cython_debug/
+# 对话记录导出
+conversations/
+ai-eva-conversation-*
 
-# PyCharm
-#  JetBrains specific template is maintained in a separate JetBrains.gitignore that can
-#  be found at https://github.com/github/gitignore/blob/main/Global/JetBrains.gitignore
-#  and can be added to the global gitignore or merged into this file.  For a more nuclear
-#  option (not recommended) you can uncomment the following to ignore the entire idea folder.
-#.idea/
+# 性能监控数据
+performance/
+stats/
+*.csv
 
-# Abstra
-# Abstra is an AI-powered process automation framework.
-# Ignore directories containing user credentials, local state, and settings.
-# Learn more at https://abstra.io/docs
-.abstra/
+# 开发工具配置
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
 
-# Visual Studio Code
-#  Visual Studio Code specific template is maintained in a separate VisualStudioCode.gitignore 
-#  that can be found at https://github.com/github/gitignore/blob/main/Global/VisualStudioCode.gitignore
-#  and can be added to the global gitignore or merged into this file. However, if you prefer, 
-#  you could uncomment the following to ignore the entire vscode folder
-# .vscode/
+# 操作系统文件
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
 
-# Ruff stuff:
-.ruff_cache/
+# 模型权重文件（通常很大）
+*.pth
+*.pt
+*.ckpt
+*.safetensors
+*.bin
+*.h5
+*.pkl
+*.joblib
 
-# PyPI configuration file
-.pypirc
+# 预训练模型目录
+pretrained/
+checkpoints/
+weights/
+asset/
 
-# Cursor
-#  Cursor is an AI-powered code editor. `.cursorignore` specifies files/directories to
-#  exclude from AI features like autocomplete and code analysis. Recommended for sensitive data
-#  refer to https://docs.cursor.com/context/ignore-files
-.cursorignore
-.cursorindexingignore
+# 数据集文件
+datasets/
+*.csv
+*.tsv
+*.parquet
 
-# Marimo
-marimo/_static/
-marimo/_lsp/
-__marimo__/
+# Jupyter Notebook 检查点
+.ipynb_checkpoints/
+
+# 测试覆盖率报告
+htmlcov/
+.coverage
+coverage.xml
+
+# 文档构建
+docs/_build/
+site/
+
+# 备份文件
+*.bak
+*.backup
+*.old
+
+# 压缩文件
+*.zip
+*.tar.gz
+*.rar
+*.7z
+
+# 数据库文件
+*.db
+*.sqlite
+*.sqlite3
+
+# 配置文件备份
+config.backup
+settings.backup
+
+# 用户数据
+user_data/
+profiles/
+sessions/
+
+# 错误报告
+error_reports/
+crash_dumps/
+
+# 性能分析文件
+*.prof
+*.profile
+
+# 内存转储
+*.dmp
+*.core
+
+# 锁文件
+*.lock
+.lock
+
+# 进程ID文件
+*.pid
+
+# 套接字文件
+*.sock
+
+# 临时目录
+/tmp/
+/temp/
+
+# 系统临时文件
+*.tmp
+*.temp
+
+# 编辑器临时文件
+*~
+.#*
+\#*#
+.#*
+
+# 项目特定的大文件
+large_files/
+big_data/
