--- a/requirements-gpu.txt
+++ b/requirements-gpu.txt
@@ -25,7 +25,7 @@ pydantic>=2.0.0
 python-multipart>=0.0.6
 
 # AI 模型核心依赖
-numpy>=1.24.0,<2.0.0
+numpy>=1.24.0,<=1.26.4
 scipy>=1.10.0
 
 # ChatTTS 语音合成
@@ -38,6 +38,8 @@ vector-quantize-pytorch
 funasr>=1.1.3
 modelscope>=1.9.0
 huggingface_hub>=0.19.0
+transformers>=4.20.0  # huggingface transformers（SenseVoice 可能需要）
+gradio>=3.0.0  # SenseVoice webui 需要
 
 # 音频处理
 librosa>=0.10.0
